fix(content) wrong margins on harvested/masked contents on mobile

--- a/app/assets/stylesheets/pages/_content.scss
+++ b/app/assets/stylesheets/pages/_content.scss
@@ -360,6 +360,10 @@ span.date-demarcation {
     margin-left: 5px;
     margin-right: 5px
   }
+  .content-masked,
+  .content-harvested {
+    margin-left: 0px
+  }
   .content-flex h1 {
     margin: 0px 10px;
   }
